Added lab 05 files
Signed-off-by: Mukhammed-Abu-Suveilim <mohammedswelem13@gmail.com>

--- a/Labs/Lab 05/report/Makefile
+++ b/Labs/Lab 05/report/Makefile
@@ -14,12 +14,16 @@ FORMAT_OPTIONS =
 ## System-wide pandoc-xnos
 # FILTERS += --filter pandoc-fignos --filter pandoc-eqnos --filter pandoc-tablenos --filter pandoc-secnos
 ## Use pandoc-crossref (https://github.com/lierdakil/pandoc-crossref)
-FILTERS += --filter pandoc-crossref
+
+FILTERS += --filter C:\Users\Mo\pandoc-crossref --filter 
+
 ###
+
 PDF_ENGINE += --pdf-engine=lualatex --pdf-engine-opt=--shell-escape
 OPTIONS += --number-sections
 BIB_OPTIONS = --citeproc
 PDF_BIB_OPTIONS = --citeproc
+
 # PDF_BIB_OPTIONS = --biblatex
 
 %.docx: %.md
@@ -28,10 +32,7 @@ PDF_BIB_OPTIONS = --citeproc
 %.pdf: %.md
 	-pandoc "$<" $(FILTERS) $(PDF_ENGINE) $(PDF_OPTIONS) $(PDF_BIB_OPTIONS) $(FORMAT_OPTIONS) $(OPTIONS) -o "$@"
 
-all: $(FILES)
-
-
 clean:
-	-rm $(FILES) *~
+	-del $(FILES) *~ 2>nul
 
 cleanall: clean
